--- a/Glosas/Glosas.html
+++ b/Glosas/Glosas.html
@@ -31,14 +31,91 @@
 </head>
 <body>
 
-<h1>Huarpe</h1>
+<h1>Textos Allentiac</h1>
 <h2>Ave María</h2>
 <table id="customers">
     <tr><th>Orgl</th><th> </th><th>lpukaxetampech</th><th>Maria</th><th>Diosech</th><th>graciata</th><th>topatanpen</th><th>señor</th><th>Dios</th><th>kaimen</th><th>hena</th></tr>
     <tr><td>Sgmt</td><td> </td><td>lpu kaxetam -peche</td><td>Maria</td><td>Dios -ech</td><td>gracia -ta</td><td>topat -a -npen</td><td>señor</td><td>Dios</td><td>ka -imen</td><td>he -na</td></tr>
     <tr><td>Glsa</td><td> </td><td>ya salvar 1.SG.IMP</td><td>Maria</td><td>Dios GEN</td><td>gracia ACC</td><td>estar lleno V.T 2.SG.IND</td><td>señor</td><td>Dios</td><td>2 ACCMP</td><td>estar 3.ind</td></tr>
   </table>
-  <h4>Dios te salve María, de la gracia de Dios estás llena, el señor Dios está contigo (que salve yo a Maraia).</h4>
+  <h4>Dios te salve María, de la gracia de Dios estás llena, el señor Dios está contigo (que salve yo a María)</h4>
+<h2></h2>
+  <table id="customers">
+    <tr><th>Orgl</th><th> </th><th>chu</th> <th>axeyamta</th> <th>ka</th> <th>ltap</th> <th>chotomanpen</th></tr>
+    <tr><td>Sgmt</td><td> </td><td>chu</td> <td>axe-yam-ta</td> <td>ka</td> <td>ltap</td> <td>choto ma -npen</td></tr>
+    <tr><td>Glsa</td><td> </td><td>todo</td> <td>f pl abl</td> <td>2</td> <td>más</td> <td>bueno ser 2.sg.ind</td></tr>
+  </table>
+  <h4>De todas las mujeres tú eres la más buena/mejor(bendita)</h4>
+<h2></h2>
+  <table id="customers">
+    <tr><th>Orgl</th><th> </th><th>kach</th> <th>tartayak</th> <th>llawe</th> <th>Jesus</th> <th>ichken</th> <th>ltap</th> <th>chotomana</th></tr>
+    <tr><td>Sgmt</td><td> </td><td>ka -ch</td> <td>tar -ta -yak</td> <td>llawe</td> <td>Jesu</td> <td>ichken</td> <td>ltap</td> <td>choto ma -na</td></tr>
+    <tr><td>Glsa</td><td> </td><td>2 gen</td> <td>vientre abl abl</td> <td>hijo</td> <td>Jesús</td> <td>también</td> <td>más</td> <td>bueno ser 3.ind</td></tr>
+  </table>
+  <h4>Y de tu vientre el hijo es el más bueno/mejor(bendito)</h4>
+  <h2></h2>
+  <table id="customers">
+    <tr><th>Orgl</th><th> </th><th>a</th> <th>santa</th> <th>Maria</th> <th>muñcha</th> <th>Diosech</th> <th>pekne</th> <th>xamkexltetete</th> <th>Dios</th> <th>maan</th> <th>xapiakexltanem</th> <th>keme</th></tr>
+    <tr><td>Sgmt</td><td> </td><td></td> <td>santa</td> <td>Maria</td> <td>muñcha</td> <td>Dios -ech</td> <td>petne</td> <td>xam ke- x- lta -te</td> <td>Dios</td> <td>maan</td> <td>xap ke- x- lta -nem</td> <td>keme</td></tr>
+    <tr><td>Glsa</td><td> </td><td></td> <td>santa</td> <td>Maria</td> <td>virgen</td> <td>Dios gen</td> <td>madre</td> <td>palabra</td> <td>1.obj pl.obj ser 3.sg.imp</td> <td>Dios</td> <td>ahora</td> <td>morir 1.obj pl.obj</td> <td>ser</td> <td>también</td></tr>
+  </table>
+  <h4>Santa María virgen Dios madre sea (tu) palabra (ruega) a nosotros ahora y también (cuando sea) la muerte para nosotros (nuestra muerte)</h4>
+  <h2></h2>
+  <table id="customers">
+    <tr><th>Orgl</th><th> </th><th>amen</th></tr>
+    <tr><td>Sgmt</td><td> </td><td>amen</td></tr>
+    <tr><td>Glsa</td><td> </td><td>amen</td></tr>
+  </table>
+  <h4>Amén.</h4>
+  <h2>Catecismo</h2>
+  <table id="customers">
+    <tr><th>Orgl</th><th> </th><th>Dios</th> <th>ete</th></tr>
+    <tr><td>Sgmt</td><td> </td><td>Dios</td> <td>he -nte</td></tr>
+    <tr><td>Glsa</td><td> </td><td>Dios</td> <td>estar 3.sg.interog</td></tr>
+  </table>
+  <h4>Hay Dios?</h4>
+  <h2></h2>
+  <table id="customers">
+    <tr><th>Orgl</th><th> </th><th>ati</th> <th>Dios</th> <th>hena</th></tr>
+    <tr><td>Sgmt</td><td> </td><td>ati</td> <td>Dios</td> <td>he -na</td></tr>
+    <tr><td>Glsa</td><td> </td><td>si</td> <td>Dios</td> <td>estar 3.ind</td></tr>
+  </table>
+  <h4>Si Dios hay</h4>
+  <h2></h2>
+  <table id="customers">
+    <tr><th>Orgl</th><th> </th><th>yemeng</th> <th>Dios</th> <th>ete</th></tr>
+    <tr><td>Sgmt</td><td> </td><td>yemneng</td> <td>Dios</td> <td>he -nte</td></tr>
+    <tr><td>Glsa</td><td> </td><td>cuántos</td> <td>Dios</td> <td>estar 3.sg.interog</td></tr>
+  </table>
+  <h4>Cuántos Dioses hay?</h4>
+  <h2></h2>
+  <table id="customers">
+    <tr><th>Orgl</th><th> </th><th>lkaa</th> <th>mazkeng</th> <th>Dios</th></tr>
+    <tr><td>Sgmt</td><td> </td><td>lkaa</td> <td>mazkeng</td> <td>Dios</td></tr>
+    <tr><td>Glsa</td><td> </td><td>uno</td> <td>nomás</td> <td>Dios</td></tr>
+  </table>
+  <h4>Un Dios no más</h4>
+  <h2></h2>
+  <table id="customers">
+    <tr><th>Orgl</th><th> </th><th>cheng</th> <th>hete</th> <th>Dios</th> <th>?</th></tr>
+    <tr><td>Sgmt</td><td> </td><td>cheng</td> <td>he -nte</td> <td>Dios</td> <td></td></tr>
+    <tr><td>Glsa</td><td> </td><td>adonde</td> <td>estar 3.sg.interog</td> <td>Dios</td> <td></td></tr>
+  </table>
+  <h4>Dónde está Dios?</h4>
+  <h2></h2>
+  <table id="customers">
+    <tr><th>Orgl</th><th> </th><th>taktaota</th> <th></th> <th>yang</th> <th>tetata</th> <th>chiang</th> <th>teye</th> <th>eltati</th></tr>
+    <tr><td>Sgmt</td><td> </td><td>taktao -ta</td> <td></td> <td>yang</td> <td>teta-ta</td> <td>chiang</td> <td>te -ye</td> <td>eltati</td></tr>
+    <tr><td>Glsa</td><td> </td><td>tierra acc</td> <td></td> <td>este</td> <td>tierra abl</td> <td>qué</td> <td>tierra dat</td> <td>cualquiera</td></tr>
+  </table>
+  <h4>En el cielo en esta la tierra y en todo lugar</h4>
+<h2></h2>
+  <table id="customers">
+    <tr><th>Orgl</th><th> </th><th>pang</th> <th>Dios</th> <th>mante</th></tr>
+    <tr><td>Sgmt</td><td> </td><td>pang</td> <td>Dios</td> <td>ma -nte</td></tr>
+    <tr><td>Glsa</td><td> </td><td>quien</td> <td>Dios</td> <td>ser 3.sg.interog</td></tr>
+  </table>
+  <h4>Quién es Dios?</h4>
 </body>
 </html>
 
