--- a/Datos_Lenguas_Andinas/Glosas/Glosas.html
+++ b/Datos_Lenguas_Andinas/Glosas/Glosas.html
@@ -12,28 +12,34 @@
 }
 
 #customers td, #customers th {
-  border: 1px solid black;
+  border: 1px solid rgb(177, 177, 177);
   padding: 8px;
   text-align: center;
 }
 
-#customers tr:nth-child(even){background-color: #f2f2f2;}
+#customers tr:nth-child(even){
+  background-color: #f2f2f2;
+}
 
-#customers tr:hover {background-color: #ddd;}
+
 tr.special_row td+td+td {
     background-color: #fff;
     color:black;
     text-shadow: none;
     font-size: medium;
+    font-weight: lighter;
+}
+#customers tr:hover {
+  background-color: #d9ead3;
 }
 tr.special_row td {
-  background-color: rgb(45, 255, 45);
+  background-color: #b6d7a8;
   padding-top: 8px;
   padding-bottom: 8px;
   text-align: center;
   color:black;
   font-style: italic;
-
+  font-weight: bold;
   font-size: large;
 }
 
