--- a/Datos_Lenguas_Andinas/Menu.html
+++ b/Datos_Lenguas_Andinas/Menu.html
@@ -55,7 +55,7 @@
 <p align="left" class="estilo16"> 8.- <a href="ExportarTablaDominios-a-csv.asp">Exportar Base de Datos Pricipal a .csv (s&oacute;lo c&oacute;digos)</a></p><p>&nbsp;</p>
 <p align="left" class="estilo16"> 9.- <a href="BaseDatosSepComasCompleta.asp">Exportar Base de Datos Principal a .csv, (con textos)</a></p><p>&nbsp;</p>
 <p align="left" class="estilo16">10.- <a href="buscarenBasePrincipal.asp">Buscar registros en Base de Datos Principal</a>. (Permite guardar resultado en archivo .csv)</p>
-<p align="left" class="estilo16">11.- <a href="Prueba3.asp">abrir tabla</a></p>		 		  
+<p align="left" class="estilo16">11.- <a href="Prueba3.html">abrir tabla</a></p>		 		  
   <input name="ultimo" type="hidden" value="">
   <input type="hidden" name="nograbado" value="">
   <p>&nbsp;</p>
