--- a/Datos_Lenguas_Andinas/Glosas/htm_txt/Allentiac_glosas/PN_ALLENTIAC.html
+++ b/Datos_Lenguas_Andinas/Glosas/htm_txt/Allentiac_glosas/PN_ALLENTIAC.html
@@ -43,11 +43,10 @@ tr.special_row td {
 }
 
 </style>
-<title>Textos Millcayac</title>
+<title>Textos Allentiac</title>
 </head>
 <body>
-  <h1>Textos Millcayac</h1>
-  <h2>Padre Nuestro</h2>
+  <h1>Padre Nuestro</h1>
 
     <table id="customers">
        <tr class='special_row'>
