--- a/Datos_Lenguas_Andinas/Glosas/htm_txt/Millcayac_glosas/AM_MILLCAYAC.html
+++ b/Datos_Lenguas_Andinas/Glosas/htm_txt/Millcayac_glosas/AM_MILLCAYAC.html
@@ -250,7 +250,7 @@ tr.special_row td {
            <td>decir FUT 1.PL</td>
         </tr>
      </table>
-     <h4>Santa María virgen Madre de Dios. Ruega por nosotros pecadores ahora y en la hora de nuestra muerte amen. </h4>
+     <h4>Santa María virgen Madre de Dios. Ruega por nosotros pecadores ahora y en la hora de nuestra muerte</h4>
      <table id="customers">
         <tr class='special_row'>
            <td>Orgl</td>
