--- a/Datos_Lenguas_Andinas/Glosas/htm_txt/Millcayac_glosas/PN_MILLCAYAC.html
+++ b/Datos_Lenguas_Andinas/Glosas/htm_txt/Millcayac_glosas/PN_MILLCAYAC.html
@@ -62,7 +62,7 @@ tr.special_row td {
            <td>ku -chu -ch</td>
            <td>prri</td>
            <td>taktu -ta</td>
-           <td>CAMBIAR</td>
+           <td>wal -ka- -y- -nan</td>
         </tr>
         <tr class='special_row'>
            <td>Glsa</td>
@@ -70,7 +70,7 @@ tr.special_row td {
            <td>yo pl gen</td>
            <td>padre</td>
            <td>arriba abl</td>
-           <td>CAMBIAR</td>
+           <td>estar VERB1 TV 2.SG</td>
         </tr>
      </table>
      <h4>Padre nuestro que estás en los cielos</h4>
@@ -87,14 +87,14 @@ tr.special_row td {
            <td> </td>
            <td>ka -che</td>
            <td>hene</td>
-           <td>CAMBIAR</td>
+           <td>mutua -ni -wa -ten</td>
         </tr>
         <tr class='special_row'>
            <td>Glsa</td>
            <td> </td>
            <td>tú gen</td>
            <td>nombre</td>
-           <td>CAMBIAR</td>
+           <td>reverenciar VERB5 PL IMP.3SG</td>
         </tr>
      </table>
      <h4>Santificado sea tu nombre</h4>
@@ -111,14 +111,14 @@ tr.special_row td {
            <td> </td>
            <td>ka -ch</td>
            <td>reino</td>
-           <td>CAMBIAR</td>
+           <td>kex- yak -ten</td>
         </tr>
         <tr class='special_row'>
            <td>Glsa</td>
            <td> </td>
            <td>tú gen</td>
            <td>reino</td>
-           <td>CAMBIAR</td>
+           <td>venir IMP.3.SG</td>
         </tr>
      </table>
      <h4>venga a nosotros tu reino</h4>
@@ -145,7 +145,7 @@ tr.special_row td {
            <td>teta -ta</td>
            <td>yekem</td>
            <td>taktu -ta</td>
-           <td>CAMBIAR</td>
+           <td>ayetzaktek -teke</td>
         </tr>
         <tr class='special_row'>
            <td>Glsa</td>
@@ -157,7 +157,7 @@ tr.special_row td {
            <td>tierra abl</td>
            <td>cuanto</td>
            <td>arriba abl</td>
-           <td>CAMBIAR</td>
+           <td>hacerse 3</td>
         </tr>
      </table>
      <h4>hagase tu voluntad en la tierra como en el cielo</h4>
@@ -182,7 +182,7 @@ tr.special_row td {
            <td>kuchuche</td>
            <td>chela</td>
            <td>chela</td>
-           <td>CAMBIAR</td>
+           <td>kupi</td>
         </tr>
         <tr class='special_row'>
            <td>Glsa</td>
@@ -193,7 +193,7 @@ tr.special_row td {
            <td>nuestro</td>
            <td>cotidiano</td>
            <td>cotidiano</td>
-           <td>CAMBIAR</td>
+           <td>kupi</td>
         </tr>
      </table>
      <h4>Danos hoy nuestro pan de cada día</h4>
@@ -222,7 +222,7 @@ tr.special_row td {
            <td>kuchu</td>
            <td>ltexte knaktiti -kane</td>
            <td>ku -chu -ye</td>
-           <td>CAMBIAR</td>
+           <td>nex kex- alte- watke</td>
         </tr>
         <tr class='special_row'>
            <td>Glsa</td>
@@ -235,7 +235,7 @@ tr.special_row td {
            <td>nosotros</td>
            <td>pensar 1.pl</td>
            <td>yo pl acc</td>
-           <td>CAMBIAR</td>
+           <td>mal 1.PL.OBJ ¿? porque</td>
         </tr>
      </table>
      <h4>Perdona nuestros pecados así como nosotros perdonamos a los que nos ofenden</h4>
@@ -252,14 +252,14 @@ tr.special_row td {
            <td> </td>
            <td>kex- mana -tek</td>
            <td>poyup</td>
-           <td>CAMBIAR</td>
+           <td>kex- alte -tek -piam</td>
         </tr>
         <tr class='special_row'>
            <td>Glsa</td>
            <td> </td>
            <td>1.pl.OBJ dejar 3</td>
            <td>pecado</td>
-           <td>CAMBIAR</td>
+           <td>pecado 1.PL.OBJ hacer 3</td>
         </tr>
      </table>
      <h4>No nos dejes caer en la tentación</h4>
@@ -276,14 +276,14 @@ tr.special_row td {
            <td> </td>
            <td>kex- ltapche -xke</td>
            <td>nexui</td>
-           <td>CAMBIAR</td>
+           <td>-ta</td>
         </tr>
         <tr class='special_row'>
            <td>Glsa</td>
            <td> </td>
            <td>1.pl.OBJ imp.2.sg</td>
            <td>mal</td>
-           <td>CAMBIAR</td>
+           <td>ABL</td>
         </tr>
      </table>
      <h4>Libranos de todo mal</h4>
@@ -296,12 +296,12 @@ tr.special_row td {
         <tr class='special_row'>
            <td>Sgmt</td>
            <td> </td>
-           <td>CAMBIAR</td>
+           <td>Amen</td>
         </tr>
         <tr class='special_row'>
            <td>Glsa</td>
            <td> </td>
-           <td>CAMBIAR</td>
+           <td>Amen</td>
         </tr>
      </table>
      <h4>Amen</h4>
